fix overflow

--- a/src/sass/modules/_project-section.scss
+++ b/src/sass/modules/_project-section.scss
@@ -80,8 +80,8 @@ div#orderButtons {
     display: block;
     padding: 1em 0 0 0;
     margin: 0 3em 0 0;
-    height: 4em;
-    max-height: 4em;
+    height: 3em;
+    max-height: 3em;
     line-height: 0;
     text-align: center;
     overflow-y: hidden;
